--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>React Demo</title>
   </head>
   <body>
     <div id="root"></div>
@@ -14,14 +14,14 @@
         <h2>Hello H1 Tag</h2>
       </div>
     </div> -->
-    <script
+    <!-- <script
       crossorigin
-      src="https://unpkg.com/react@18/umd/react.development.js"
+      src="https://unpkg.com/react@18/umd/react.development.js"  NOT USE BECAUSE INSTALL NPM
     ></script>
     <script
       crossorigin
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-    ></script>
-    <script src="./App.js"></script>
+    ></script> -->
+    <script type="module" src="./App.js"></script>
   </body>
 </html>
